Final report update

--- a/docs/finalreport/index.bib
+++ b/docs/finalreport/index.bib
@@ -6,13 +6,14 @@
   year={2003}
 }
 
-@article{ref2,
-  title={Improving the Quality of OpenAPI Specifications Using TypeScript Types and Annotations},
-  author={Hobmaier, Wolfgang}
+@thesis{ref2,
+  title={Improving the Quality of {OpenAPI} Specifications Using {TypeScript} Types and Annotations},
+  author={Hobmaier, Wolfgang},\\~  type={Bachelor's Thesis},
+  year={2020}
 }
 
 @inproceedings{ref3,
-  title={Exploring API method parameter recommendations},
+  title={Exploring {API} method parameter recommendations},
   author={Asaduzzaman, Muhammad and Roy, Chanchal K and Monir, Samiul and Schneider, Kevin A},
   booktitle={2015 IEEE International Conference on Software Maintenance and Evolution (ICSME)},
   pages={271--280},
@@ -21,7 +22,7 @@
 }
 
 @inproceedings{ref4,
-  title={TypeTool: A type inference visualization tool},
+  title={{TypeTool}: A type inference visualization tool},
   author={Simoes, Hugo and Florido, Mário},
   booktitle={WFLP’04: Proc. 13th Intl. Workshop on Functional and (Constraint) Logic Programming, H. Kuchen, Ed. RWTH Aachen, Dept. Comp. Sc., Technical report AIB-2004-05},
   pages={48--61},
@@ -30,7 +31,7 @@
 }
 
 @article{ref5,
-  title={Feedback research revisited.},
+  title={Feedback research revisited},
   author={Mory, Edna Holland},
   year={2004},
   publisher={Lawrence Erlbaum Associates Publishers}
@@ -53,7 +54,7 @@
 }
 
 @article{ref8,
-  title={Nimotoons: a totally graphic workbench for program tuning and experimentation},
+  title={{Nimotoons}: a totally graphic workbench for program tuning and experimentation},
   author={Clerici, Silvia and Zoltan, Cristina and Prestigiacomo, Guillermo},
   journal={Electronic Notes in Theoretical Computer Science},
   volume={258},
@@ -64,7 +65,7 @@
 }
 
 @article{ref9,
-  title={TILC: The interactive lambda-calculus tracer},
+  title={{TILC}: The interactive lambda-calculus tracer},
   author={Ruiz, David and Villaret, Mateu},
   journal={Electronic Notes in Theoretical Computer Science},
   volume={248},
@@ -73,7 +74,7 @@
   publisher={Elsevier}
 }
 
-@article{ref10,
+@article{ref11,
   title={A formulation of the simple theory of types},
   author={Church, Alonzo},
   journal={The journal of symbolic logic},
@@ -84,7 +85,7 @@
   publisher={JSTOR}
 }
 
-@article{ref11,
+@article{ref12,
   title={The principal type-scheme of an object in combinatory logic},
   author={Hindley, Roger},
   journal={Transactions of the american mathematical society},
@@ -94,7 +95,7 @@
   publisher={JSTOR}
 }
 
-@article{ref12,
+@article{ref13,
   title={A theory of type polymorphism in programming},
   author={Milner, Robin},
   journal={Journal of computer and system sciences},
@@ -105,8 +106,8 @@
   publisher={Elsevier}
 }
 
-@article{ref13,
-  title={Typability and type checking in System F are equivalent and undecidable},
+@article{ref14,
+  title={Typability and type checking in {System F} are equivalent and undecidable},
   author={Wells, Joe B},
   journal={Annals of Pure and Applied Logic},
   volume={98},
@@ -116,15 +117,15 @@
   publisher={Elsevier}
 }
 
-@book{ref14,
-  title={Standard ml},
+@book{ref15,
+  title={{Standard ML}},
   author={Harper, Robert and MacQueen, David and Milner, Robin},
   year={1986},
   publisher={Department of Computer Science, University of Edinburgh}
 }
 
-@article{ref15,
-  title={Type classes in Haskell},
+@article{ref16,
+  title={Type classes in {Haskell}},
   author={Hall, Cordelia V and Hammond, Kevin and Peyton Jones, Simon L and Wadler, Philip L},
   journal={ACM Transactions on Programming Languages and Systems (TOPLAS)},
   volume={18},
@@ -134,7 +135,7 @@
   publisher={ACM New York, NY, USA}
 }
 
-@book{ref16,
+@book{ref17,
   title={Qualified types: theory and practice},
   author={Jones, Mark P},
   number={9},
@@ -142,7 +143,7 @@
   publisher={Cambridge University Press}
 }
 
-@inproceedings{ref17,
+@inproceedings{ref18,
   title={Type classes with functional dependencies},
   author={Jones, Mark P},
   booktitle={European Symposium on Programming},
@@ -151,8 +152,8 @@
   organization={Springer}
 }
 
-@article{ref18,
-  title={Simple unification-based type inference for GADTs},
+@article{ref19,
+  title={Simple unification-based type inference for {GADTs}},
   author={Peyton Jones, Simon and Vytiniotis, Dimitrios and Weirich, Stephanie and Washburn, Geoffrey},
   journal={ACM SIGPLAN Notices},
   volume={41},
@@ -162,8 +163,8 @@
   publisher={ACM New York, NY, USA}
 }
 
-@article{ref19,
-  title={OutsideIn (X) Modular type inference with local assumptions},
+@article{ref20,
+  title={{OutsideIn (X)} Modular type inference with local assumptions},
   author={Vytiniotis, Dimitrios and Jones, Simon Peyton and Schrijvers, Tom and Sulzmann, Martin},
   journal={Journal of functional programming},
   volume={21},
@@ -173,7 +174,7 @@
   publisher={Cambridge University Press}
 }
 
-@inproceedings{ref20,
+@inproceedings{ref21,
   title={Let should not be generalized},
   author={Vytiniotis, Dimitrios and Peyton Jones, Simon and Schrijvers, Tom},
   booktitle={Proceedings of the 5th ACM SIGPLAN workshop on Types in language design and implementation},
@@ -181,7 +182,37 @@
   year={2010}
 }
 
-@article{ref21,
+@misc{ref22,
+  author={Matsakis, Nicholas D},
+  title={An experimental new type inference scheme for {Rust}},
+  year={2014},
+  url={http://smallcultfollowing.com/babysteps/blog/2014/07/09/an-experimental-new-type-inference-scheme-for-rust/},
+  note={Accessed 2021-02-27}
+}
+
+@misc{ref23,
+  author={Matsakis, Nicholas D},
+  title={Unification in {Chalk}, part 1},
+  year={2017},
+  url={https://smallcultfollowing.com/babysteps/blog/2017/03/25/unification-in-chalk-part-1/},
+  note={Accessed 2021-02-27}
+}
+
+@misc{ref24,
+  author={Gregor, Doug},
+  title={Swift Type Checker Design and Implementation},
+  year={2017},
+  url={https://apple-swift.readthedocs.io/en/latest/TypeChecker.html},
+  note={Accessed 2021-03-19}
+
+@book{ref25,
+  title={The Java language specification},
+  author={Gosling, James and Joy, Bill and Steele, Guy and Bracha, Gilad},
+  year={2000},
+  publisher={Addison-Wesley Professional}
+}
+
+@article{ref26,
   title={A theory of type polymorphism in programming},
   author={Milner, Robin},
   journal={Journal of computer and system sciences},
@@ -192,7 +223,7 @@
   publisher={Elsevier}
 }
 
-@article{ref22,
+@article{ref27,
   title={Proofs about a folklore let-polymorphic type inference algorithm},
   author={Lee, Oukseh and Yi, Kwangkeun},
   journal={ACM Transactions on Programming Languages and Systems (TOPLAS)},
@@ -203,7 +234,49 @@
   publisher={ACM New York, NY, USA}
 }
 
-@book{ref23,
+@inproceedings{ref28,
+  title={On the unification of substitutions in type inference},
+  author={McAdam, Bruce J},
+  booktitle={Symposium on Implementation and Application of Functional Languages},
+  pages={137--152},
+  year={1998},
+  organization={Springer}
+}
+
+@article{ref29,
+  title={A machine-oriented logic based on the resolution principle},
+  author={Robinson, John Alan},
+  journal={Journal of the ACM (JACM)},
+  volume={12},
+  number={1},
+  pages={23--41},
+  year={1965},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{ref30,
+  title={Unification in Linear Time and Space: A Structured Presentation},
+  author={Manelli, Alberto and Montanari, Ugo},
+  journal={Ist. di Elaborazione delle Informazione, Consiglio Nazionale delle Ricerche, Pisa, Italy},
+  year={1976}
+}
+
+@inproceedings{ref31,
+  title={Linear unification},
+  author={Paterson, Michael S and Wegman, Mark N},
+  booktitle={Proceedings of the eighth annual ACM symposium on Theory of computing},
+  pages={181--186},
+  year={1976}
+}
+
+@misc{ref32,
+  author={Gregor, Doug},
+  title={Swift Type Checker Design and Implementation},
+  year={2017},
+  url={https://apple-swift.readthedocs.io/en/latest/TypeChecker.html},
+  note={Accessed 2021-03-19}
+
+@book{ref33,
   title={Top quality type error messages},
   author={Heeren, Bastiaan J},
   year={2005},
