Final report updates

--- a/docs/finalreport/index.bib
+++ b/docs/finalreport/index.bib
@@ -74,6 +74,17 @@
   publisher={Elsevier}
 }
 
+@article{ref10,
+  title={An unsolvable problem of elementary number theory},
+  author={Church, Alonzo},
+  journal={American journal of mathematics},
+  volume={58},
+  number={2},
+  pages={345--363},
+  year={1936},
+  publisher={JSTOR}
+}
+
 @article{ref11,
   title={A formulation of the simple theory of types},
   author={Church, Alonzo},
@@ -269,14 +280,32 @@
   year={1976}
 }
 
-@misc{ref32,
+@book{ref32,
+  title={The Caml Light system, release 0.6: Documentation and user's manual},
+  author={Leroy, Xavier and Mauny, Michel},
+  year={1993},
+  publisher={Universit{\'e} de Savoie}
+}
+
+@article{ref33,
+  title={Proofs about a folklore let-polymorphic type inference algorithm},
+  author={Lee, Oukseh and Yi, Kwangkeun},
+  journal={ACM Transactions on Programming Languages and Systems (TOPLAS)},
+  volume={20},
+  number={4},
+  pages={707--723},
+  year={1998},
+  publisher={ACM New York, NY, USA}
+}
+
+@misc{ref34,
   author={Gregor, Doug},
   title={Swift Type Checker Design and Implementation},
   year={2017},
   url={https://apple-swift.readthedocs.io/en/latest/TypeChecker.html},
   note={Accessed 2021-03-19}
 
-@book{ref33,
+@book{ref35,
   title={Top quality type error messages},
   author={Heeren, Bastiaan J},
   year={2005},
